sync: update 128 base files + add 220 new files from FongMi/TV upstream (fongmi branch)
- 128 files updated from upstream (files with >85% similarity - minor tweaks)
- 220 new files added from upstream (new features/dialogs/activities)
- 1484 peach-custom files preserved (local-only, not in upstream)
- 190 files with conflicts requiring manual review (heavily customized or borderline)
- Backup branch: backup-before-fongmi-update-0810